<?xml version="1.0"?>
<package>
  <name>turtlesim_position_controller</name>
  <version>0.0.1</version>
  <description>The turtlesim_position_controller package</description>

  <maintainer email="jonsenra.93@gmail.com">Jon Senra Dearle</maintainer>

  <license>GPLv3</license>

  <author email="jonsenra.93@gmail.com">Jon Senra Dearle</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>turtlesim</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>turtlesim</run_depend>
  <run_depend>geometry_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>